--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">World Wonders</string>
-    <string name="signup">SIGNUP</string>
-    <string name="login">LOGIN</string>
+    <string name="signup">REGISTRAR</string>
+    <string name="login">ENTRAR</string>
     <string name="title_activity_signup">World Wonders</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="name">Name</string>
+    <string name="action_settings">Configurações</string>
+    <string name="username">Usuário</string>
+    <string name="password">Senha</string>
+    <string name="name">Nome</string>
 </resources>
