--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,6 @@
     <string name="name">Name</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_signup">World Wonders</string>
+    <string name="msg_progress_dialog_wait_image">Loading image...</string>
+    <string name="title_progress_dialog_wait_image">Wait</string>
 </resources>
