--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,6 @@
     <string name="title_activity_signup">World Wonders</string>
     <string name="msg_progress_dialog_wait_image">Loading image...</string>
     <string name="title_progress_dialog_wait_image">Wait</string>
+    <string name="action_bookmark">Bookmark</string>
+    <string name="action_directions">Direção</string>
 </resources>
