--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_progress_dialog_wait_image">Wait</string>
     <string name="action_bookmark">Bookmark</string>
     <string name="action_directions">Direção</string>
+    <string name="mensagem_direcao_invalida">Direção não fornecida para a maravilha!</string>
 </resources>
